2008-07-03 Harri Pitkänen <hatapitk@iki.fi>

	* Work on grammar checker.

2008-07-02 Harri Pitkänen <hatapitk@iki.fi>

	* Work on grammar checker.
	* Increase library version number to 2.0.
	* Update README.

2008-07-01 Harri Pitkänen <hatapitk@iki.fi>

	* Split and update manual pages.
	* Add single paragraph grammar checker cache.

2008-06-29 Harri Pitkänen <hatapitk@iki.fi>

	* Move grammar checking related functionality from
	  voikkohyphenate to a new test tool voikkogc.

2008-06-28 Harri Pitkänen <hatapitk@iki.fi>

	* Add API for grammar checking.

2008-06-08 Harri Pitkänen <hatapitk@iki.fi>

	* Work on sentence splitting.
	* Allow strings longer than LIBVOIKKO_MAX_WORD_CHARS to
	  be converted with voikko_cstrtoucs4.

2008-06-07 Harri Pitkänen <hatapitk@iki.fi>

	* Work on sentence splitting.

2008-06-04 Harri Pitkänen <hatapitk@iki.fi>

	* Work on sentence splitting.
	* Increase version numbers for version 1.8.

2008-05-26 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>

	* Provide libvoikko.pc for pkg-config.

2008-03-07 Harri Pitkänen <hatapitk@iki.fi>

	* Fix hyphenation of nougat'kaan.

2008-01-29 Harri Pitkänen <hatapitk@iki.fi>

	* Increase cost limit for suggestions from 250 to 350.

2008-01-19 Harri Pitkänen <hatapitk@iki.fi>

	* Iconv on OS X should use UCS-4-INTERNAL too.

2007-12-30 Harri Pitkänen <hatapitk@iki.fi>

	* Some fixes for VOIKKO_OPT_ACCEPT_EXTRA_HYPHENS.
	* Add option VOIKKO_OPT_ACCEPT_MISSING_HYPHENS.

2007-12-29 Harri Pitkänen <hatapitk@iki.fi>

	* Add option VOIKKO_OPT_ACCEPT_EXTRA_HYPHENS.

2007-12-01 Harri Pitkänen <hatapitk@iki.fi>

	* Tokenization functions should not be used without initializing the
	  library.

2007-11-28 Harri Pitkänen <hatapitk@iki.fi>

	* Fix configure test AM_ICONV failing with -Wall on FreeBSD.
	* Tweak URL recognition so that "J.K.Paasikivi" will not be
	  considered as hostname.

2007-11-27 Harri Pitkänen <hatapitk@iki.fi>

	* Add boolean option VOIKKO_OPT_IGNORE_NONWORDS.