@@ -4,3 +4,4 @@ Mies on joten kuten selvillä siitä, että hänen on joten kuten palattava koti
  [code=1, level=0, descr="", stpos=50, len=11, suggs={}]
 Se oli joten  kuten.
  [code=1, level=0, descr="", stpos=7, len=12, suggs={}]
+ [code=2, level=0, descr="", stpos=12, len=2, suggs={}]
